add extract vm command for tomcat or gradle task project.