@@ -1,14 +1,21 @@
 package org.hotswap.hotswaphelper.utils;
 
+import com.google.common.collect.Lists;
 import com.sun.jna.Platform;
 
 import java.io.File;
 import java.nio.file.Files;
+import java.util.List;
 
 /**
  * @author bruce ge 2024/8/19
  */
 public class MyUtils {
+
+    public static List<String> allOpens = Lists.newArrayList("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+            ,"--add-opens=java.base/java.lang=ALL-UNNAMED","--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+            ,"--add-opens=java.base/java.io=ALL-UNNAMED","--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED","--add-opens=java.base/java.net=ALL-UNNAMED");
 
     public static String WINDOWSHOTSWAPFOLDER = "C:/tmp/HotSwapAgent/";
     public static String OTHERHOTSWAPFOLDER = "/tmp/HotSwapAgent/";
